<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/add_product_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/product_detail_label"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:background="@android:color/darker_gray" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_bottom_margin"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/product_name_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:gravity="center_vertical"
                android:hint="@string/product_name_label"
                android:inputType="text"
                android:paddingTop="@dimen/edit_text_padding_top"
                android:textSize="@dimen/text_size" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/edit_text_right_margin"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:text="@string/unit_label" />

        <TextView
            android:id="@+id/unit_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_style"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_bottom_margin"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/product_price_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:gravity="center_vertical"
                android:hint="@string/product_price_label"
                android:inputType="numberDecimal"
                android:paddingTop="@dimen/edit_text_padding_top"
                android:textSize="@dimen/text_size" />
        </android.support.design.widget.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/addProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/product_add"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>