<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/add_product_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/add_which_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/department_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginRight="@dimen/edit_text_right_margin"
                android:gravity="center_vertical"
                android:text="@string/department_label" />

            <TextView
                android:id="@+id/department_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_style"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_et_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_bottom_margin"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:gravity="center_vertical"
                android:hint="@string/add_single_name_label"
                android:inputType="text"
                android:paddingTop="@dimen/edit_text_padding_top"
                android:textSize="@dimen/text_size" />
        </android.support.design.widget.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/addDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/add"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>