<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/date_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_action_choose_calendar"
            android:gravity="center"
            android:padding="2dp"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/start_time_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_action_event_time"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/end_time_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableRight="@drawable/ic_action_event_time"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_bottom_margin"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/event_title_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:gravity="center_vertical"
                android:hint="@string/event_title"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/edit_text_padding_top"
                android:textSize="@dimen/text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_bottom_margin"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/event_description_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:gravity="center_vertical"
                android:hint="@string/event_description"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/edit_text_padding_top"
                android:textSize="@dimen/text_size" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_bottom_margin"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/event_address_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:gravity="center_vertical"
                android:hint="@string/event_location"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/edit_text_padding_top"
                android:textSize="@dimen/text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_bottom_margin"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/event_email_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:gravity="center_vertical"
                android:hint="@string/event_email"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/edit_text_padding_top"
                android:textSize="@dimen/text_size" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/add_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/spinner_background_dark_grey"
            android:padding="10dp"
            android:text="Add Event"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>